post clean warnings